--- a/cn/index.html
+++ b/cn/index.html
@@ -323,6 +323,22 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.pianku.me/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.pianku.me/">
+                        <div class="xe-comment-entry">
+                            <a class="xe-user-img">
+                                <img data-src="../assets/images/logos/pianku.png" class="lozad img-circle" width="40">
+                            </a>
+                            <span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip"></span>
+                            <div class="xe-comment">
+                                <a href="#" class="xe-user-name overflowClip_1">
+                                    <strong>片库</strong>
+                                </a>
+                                <p class="overflowClip_2">下载电影的好去处</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
                     <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.youtube.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.youtube.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
