--- a/cn/index.html
+++ b/cn/index.html
@@ -176,7 +176,7 @@
 
             </nav>
             <!-- 常用推荐 -->
-            <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="常用推荐"></i>常用推荐</h4>
+            <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="常用推荐"></i>常用推荐（免费）</h4>
             <div class="row">
                 <div class="col-sm-3">
                     <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://dribbble.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://dribbble.com/">
@@ -333,11 +333,43 @@
                                 <a href="#" class="xe-user-name overflowClip_1">
                                     <strong>片库</strong>
                                 </a>
-                                <p class="overflowClip_2">下载电影的好去处</p>
+                                <p class="overflowClip_2">提供电影和电视剧BT/磁力链下载</p>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="col-sm-3">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://pianyuan.la/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://pianyuan.la/">
+                        <div class="xe-comment-entry">
+                            <a class="xe-user-img">
+                                <img data-src="../assets/images/logos/film.png" class="lozad img-circle" width="40">
+                            </a>
+                            <span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip"></span>
+                            <div class="xe-comment">
+                                <a href="#" class="xe-user-name overflowClip_1">
+                                    <strong>片源网</strong>
+                                </a>
+                                <p class="overflowClip_2">提供电影和电视剧BT/磁力链下载</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://bde4.cc/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://bde4.cc/">
+                        <div class="xe-comment-entry">
+                            <a class="xe-user-img">
+                                <img data-src="../assets/images/logos/film.png" class="lozad img-circle" width="40">
+                            </a>
+                            <span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip"></span>
+                            <div class="xe-comment">
+                                <a href="#" class="xe-user-name overflowClip_1">
+                                    <strong>哔嘀影视</strong>
+                                </a>
+                                <p class="overflowClip_2">提供电影和电视剧BT/磁力链下载</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>                                
                 <div class="col-sm-3">
                     <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.youtube.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.youtube.com/">
                         <div class="xe-comment-entry">
